# my-blog

./: db.sqlite3  pyproject.toml
blog/: filters.py  models.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: article.html
blog_project/: settings.py
